update code blog

--- a/index.html
+++ b/index.html
@@ -518,115 +518,327 @@
           <div class="blog__list">
             <div class="blog__item">
               <div class="blog__content">
-                <div class="blog__image">
-                  <img src="./image/blog1.png" alt=" " />
+                <div class="blog__content-front">
+                  <div class="blog__inner">
+                    <div class="blog__image">
+                      <img src="./image/blog1.png" alt="" />
+                    </div>
+                    <div class="blog__content-inner">
+                      <h3 class="blog__content-title">
+                        2017 KBB.com Most Awarded Brand
+                      </h3>
+                      <span class="blog__content-desc">
+                        With more than two dozen brand and individual awards,
+                        Kelly Blue Book's KBB.com has awarded Honda as the most
+                        awarded brand of 2017
+                      </span>
+                      <a href="#" class="blog__content-link"> LEARN MORE </a>
+                    </div>
+                  </div>
                 </div>
-                <div class="blog__content-inner">
-                  <h3 class="blog__content-title">
-                    2017 KBB.com Most Awarded Brand
-                  </h3>
-                  <span class="blog__content-desc">
-                    With more than two dozen brand and individual awards, Kelly
-                    Blue Book's KBB.com has awarded Honda as the most awarded
-                    brand of 2017
-                  </span>
-                  <a href="#" class="blog__content-link"> LEARN MORE </a>
-                </div>
-              </div>
-            </div>
-            <div class="blog__item">
-              <div class="blog__content">
-                <div class="blog__image">
-                  <img src="./image/blog1.png" alt=" " />
-                </div>
-                <div class="blog__content-inner">
-                  <h3 class="blog__content-title">
-                    2017 KBB.com Most Awarded Brand
-                  </h3>
-                  <span class="blog__content-desc">
-                    With more than two dozen brand and individual awards, Kelly
-                    Blue Book's KBB.com has awarded Honda as the most awarded
-                    brand of 2017
-                  </span>
-                  <a href="#" class="blog__content-link"> LEARN MORE </a>
-                </div>
-              </div>
-            </div>
-            <div class="blog__item">
-              <div class="blog__content">
-                <div class="blog__image">
-                  <img src="./image/blog1.png" alt=" " />
-                </div>
-                <div class="blog__content-inner">
-                  <h3 class="blog__content-title">
-                    2017 KBB.com Most Awarded Brand
-                  </h3>
-                  <span class="blog__content-desc">
-                    With more than two dozen brand and individual awards, Kelly
-                    Blue Book's KBB.com has awarded Honda as the most awarded
-                    brand of 2017
-                  </span>
-                  <a href="#" class="blog__content-link"> LEARN MORE </a>
-                </div>
-              </div>
-            </div>
-            <div class="blog__item">
-              <div class="blog__content">
-                <div class="blog__image">
-                  <img src="./image/blog1.png" alt=" " />
-                </div>
-                <div class="blog__content-inner">
-                  <h3 class="blog__content-title">
-                    2017 KBB.com Most Awarded Brand
-                  </h3>
-                  <span class="blog__content-desc">
-                    With more than two dozen brand and individual awards, Kelly
-                    Blue Book's KBB.com has awarded Honda as the most awarded
-                    brand of 2017
-                  </span>
-                  <a href="#" class="blog__content-link"> LEARN MORE </a>
+                <div class="blog__content-back">
+                  <div class="blog__detail">
+                    <div class="blog__detail-heading">
+                      <a href="#"><i class="fab fa-linkedin"></i></a>
+                      <a href="#"><i class="fab fa-instagram"></i></a>
+                      <a href="#"><i class="fab fa-twitter"></i></a>
+                    </div>
+                    <div class="blog__detail-logo">
+                      <img src="./image/logo-honda.jpg" alt="" />
+                      <div class="blog__detail-brand">
+                        <a href="#" class="blog__detail-link">Honda</a>
+                        <p>@Honda</p>
+                      </div>
+                    </div>
+                    <div class="blog__detail-desc">
+                      Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                      Reiciendis sit dolorum, asperiores placeat deleniti est.
+                      <a href="#" class="blog__detail-desc-link">
+                        https://t.co/UC7OLudVr4</a
+                      >
+                    </div>
+                    <span class="blog__detail-time">
+                      12:00 AM - 07 Apr 2018
+                    </span>
+                    <div class="blog__detail-icon">
+                      <i class="fa fa-reply"></i>
+                      <i class="fa fa-retweet">10</i>
+                      <i class="fa fa-heart">25</i>
+                    </div>
+                  </div>
                 </div>
               </div>
             </div>
             <div class="blog__item">
               <div class="blog__content">
-                <div class="blog__image">
-                  <img src="./image/blog1.png" alt=" " />
+                <div class="blog__content-front">
+                  <div class="blog__inner">
+                    <div class="blog__image">
+                      <img src="./image/blog2.png" alt="" />
+                    </div>
+                    <div class="blog__content-inner">
+                      <h3 class="blog__content-title">
+                        2017 KBB.com Most Awarded Brand
+                      </h3>
+                      <span class="blog__content-desc">
+                        With more than two dozen brand and individual awards,
+                        Kelly Blue Book's KBB.com has awarded Honda as the most
+                        awarded brand of 2017
+                      </span>
+                      <a href="#" class="blog__content-link"> LEARN MORE </a>
+                    </div>
+                  </div>
                 </div>
-                <div class="blog__content-inner">
-                  <h3 class="blog__content-title">
-                    2017 KBB.com Most Awarded Brand
-                  </h3>
-                  <span class="blog__content-desc">
-                    With more than two dozen brand and individual awards, Kelly
-                    Blue Book's KBB.com has awarded Honda as the most awarded
-                    brand of 2017
-                  </span>
-                  <a href="#" class="blog__content-link"> LEARN MORE </a>
+                <div class="blog__content-back">
+                  <div class="blog__detail">
+                    <div class="blog__detail-heading">
+                      <a href="#"><i class="fab fa-linkedin"></i></a>
+                      <a href="#"><i class="fab fa-instagram"></i></a>
+                      <a href="#"><i class="fab fa-twitter"></i></a>
+                    </div>
+                    <div class="blog__detail-logo">
+                      <img src="./image/logo-honda.jpg" alt="" />
+                      <div class="blog__detail-brand">
+                        <a href="#" class="blog__detail-link">Honda</a>
+                        <p>@Honda</p>
+                      </div>
+                    </div>
+                    <div class="blog__detail-desc">
+                      Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                      Reiciendis sit dolorum, asperiores placeat deleniti est.
+                      <a href="#" class="blog__detail-desc-link">
+                        https://t.co/UC7OLudVr4</a
+                      >
+                    </div>
+                    <span class="blog__detail-time">
+                      12:00 AM - 07 Apr 2018
+                    </span>
+                    <div class="blog__detail-icon">
+                      <i class="fa fa-reply"></i>
+                      <i class="fa fa-retweet">10</i>
+                      <i class="fa fa-heart">25</i>
+                    </div>
+                  </div>
                 </div>
               </div>
             </div>
             <div class="blog__item">
               <div class="blog__content">
-                <div class="blog__image">
-                  <img src="./image/blog1.png" alt=" " />
+                <div class="blog__content-front">
+                  <div class="blog__inner">
+                    <div class="blog__image">
+                      <img src="./image/blog3.png" alt="" />
+                    </div>
+                    <div class="blog__content-inner">
+                      <h3 class="blog__content-title">
+                        2017 KBB.com Most Awarded Brand
+                      </h3>
+                      <span class="blog__content-desc">
+                        With more than two dozen brand and individual awards,
+                        Kelly Blue Book's KBB.com has awarded Honda as the most
+                        awarded brand of 2017
+                      </span>
+                      <a href="#" class="blog__content-link"> LEARN MORE </a>
+                    </div>
+                  </div>
                 </div>
-                <div class="blog__content-inner">
-                  <h3 class="blog__content-title">
-                    2017 KBB.com Most Awarded Brand
-                  </h3>
-                  <span class="blog__content-desc">
-                    With more than two dozen brand and individual awards, Kelly
-                    Blue Book's KBB.com has awarded Honda as the most awarded
-                    brand of 2017
-                  </span>
-                  <a href="#" class="blog__content-link"> LEARN MORE </a>
+                <div class="blog__content-back">
+                  <div class="blog__detail">
+                    <div class="blog__detail-heading">
+                      <a href="#"><i class="fab fa-linkedin"></i></a>
+                      <a href="#"><i class="fab fa-instagram"></i></a>
+                      <a href="#"><i class="fab fa-twitter"></i></a>
+                    </div>
+                    <div class="blog__detail-logo">
+                      <img src="./image/logo-honda.jpg" alt="" />
+                      <div class="blog__detail-brand">
+                        <a href="#" class="blog__detail-link">Honda</a>
+                        <p>@Honda</p>
+                      </div>
+                    </div>
+                    <div class="blog__detail-desc">
+                      Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                      Reiciendis sit dolorum, asperiores placeat deleniti est.
+                      <a href="#" class="blog__detail-desc-link">
+                        https://t.co/UC7OLudVr4</a
+                      >
+                    </div>
+                    <span class="blog__detail-time">
+                      12:00 AM - 07 Apr 2018
+                    </span>
+                    <div class="blog__detail-icon">
+                      <i class="fa fa-reply"></i>
+                      <i class="fa fa-retweet">10</i>
+                      <i class="fa fa-heart">25</i>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <div class="blog__item">
+              <div class="blog__content">
+                <div class="blog__content-front">
+                  <div class="blog__inner">
+                    <div class="blog__image">
+                      <img src="./image/blog4.png" alt="" />
+                    </div>
+                    <div class="blog__content-inner">
+                      <h3 class="blog__content-title">
+                        2017 KBB.com Most Awarded Brand
+                      </h3>
+                      <span class="blog__content-desc">
+                        With more than two dozen brand and individual awards,
+                        Kelly Blue Book's KBB.com has awarded Honda as the most
+                        awarded brand of 2017
+                      </span>
+                      <a href="#" class="blog__content-link"> LEARN MORE </a>
+                    </div>
+                  </div>
+                </div>
+                <div class="blog__content-back">
+                  <div class="blog__detail">
+                    <div class="blog__detail-heading">
+                      <a href="#"><i class="fab fa-linkedin"></i></a>
+                      <a href="#"><i class="fab fa-instagram"></i></a>
+                      <a href="#"><i class="fab fa-twitter"></i></a>
+                    </div>
+                    <div class="blog__detail-logo">
+                      <img src="./image/logo-honda.jpg" alt="" />
+                      <div class="blog__detail-brand">
+                        <a href="#" class="blog__detail-link">Honda</a>
+                        <p>@Honda</p>
+                      </div>
+                    </div>
+                    <div class="blog__detail-desc">
+                      Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                      Reiciendis sit dolorum, asperiores placeat deleniti est.
+                      <a href="#" class="blog__detail-desc-link">
+                        https://t.co/UC7OLudVr4</a
+                      >
+                    </div>
+                    <span class="blog__detail-time">
+                      12:00 AM - 07 Apr 2018
+                    </span>
+                    <div class="blog__detail-icon">
+                      <i class="fa fa-reply"></i>
+                      <i class="fa fa-retweet">10</i>
+                      <i class="fa fa-heart">25</i>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <div class="blog__item">
+              <div class="blog__content">
+                <div class="blog__content-front">
+                  <div class="blog__inner">
+                    <div class="blog__image">
+                      <img src="./image/blog5.png" alt="" />
+                    </div>
+                    <div class="blog__content-inner">
+                      <h3 class="blog__content-title">
+                        2017 KBB.com Most Awarded Brand
+                      </h3>
+                      <span class="blog__content-desc">
+                        With more than two dozen brand and individual awards,
+                        Kelly Blue Book's KBB.com has awarded Honda as the most
+                        awarded brand of 2017
+                      </span>
+                      <a href="#" class="blog__content-link"> LEARN MORE </a>
+                    </div>
+                  </div>
+                </div>
+                <div class="blog__content-back">
+                  <div class="blog__detail">
+                    <div class="blog__detail-heading">
+                      <a href="#"><i class="fab fa-linkedin"></i></a>
+                      <a href="#"><i class="fab fa-instagram"></i></a>
+                      <a href="#"><i class="fab fa-twitter"></i></a>
+                    </div>
+                    <div class="blog__detail-logo">
+                      <img src="./image/logo-honda.jpg" alt="" />
+                      <div class="blog__detail-brand">
+                        <a href="#" class="blog__detail-link">Honda</a>
+                        <p>@Honda</p>
+                      </div>
+                    </div>
+                    <div class="blog__detail-desc">
+                      Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                      Reiciendis sit dolorum, asperiores placeat deleniti est.
+                      <a href="#" class="blog__detail-desc-link">
+                        https://t.co/UC7OLudVr4</a
+                      >
+                    </div>
+                    <span class="blog__detail-time">
+                      12:00 AM - 07 Apr 2018
+                    </span>
+                    <div class="blog__detail-icon">
+                      <i class="fa fa-reply"></i>
+                      <i class="fa fa-retweet">10</i>
+                      <i class="fa fa-heart">25</i>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <div class="blog__item">
+              <div class="blog__content">
+                <div class="blog__content-front">
+                  <div class="blog__inner">
+                    <div class="blog__image">
+                      <img src="./image/blog6.png" alt="" />
+                    </div>
+                    <div class="blog__content-inner">
+                      <h3 class="blog__content-title">
+                        2017 KBB.com Most Awarded Brand
+                      </h3>
+                      <span class="blog__content-desc">
+                        With more than two dozen brand and individual awards,
+                        Kelly Blue Book's KBB.com has awarded Honda as the most
+                        awarded brand of 2017
+                      </span>
+                      <a href="#" class="blog__content-link"> LEARN MORE </a>
+                    </div>
+                  </div>
+                </div>
+                <div class="blog__content-back">
+                  <div class="blog__detail">
+                    <div class="blog__detail-heading">
+                      <a href="#"><i class="fab fa-linkedin"></i></a>
+                      <a href="#"><i class="fab fa-instagram"></i></a>
+                      <a href="#"><i class="fab fa-twitter"></i></a>
+                    </div>
+                    <div class="blog__detail-logo">
+                      <img src="./image/logo-honda.jpg" alt="" />
+                      <div class="blog__detail-brand">
+                        <a href="#" class="blog__detail-link">Honda</a>
+                        <p>@Honda</p>
+                      </div>
+                    </div>
+                    <div class="blog__detail-desc">
+                      Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                      Reiciendis sit dolorum, asperiores placeat deleniti est.
+                      <a href="#" class="blog__detail-desc-link">
+                        https://t.co/UC7OLudVr4</a
+                      >
+                    </div>
+                    <span class="blog__detail-time">
+                      12:00 AM - 07 Apr 2018
+                    </span>
+                    <div class="blog__detail-icon">
+                      <i class="fa fa-reply"></i>
+                      <i class="fa fa-retweet">10</i>
+                      <i class="fa fa-heart">25</i>
+                    </div>
+                  </div>
                 </div>
               </div>
             </div>
           </div>
         </div>
       </section>
+
+      <section class="test"></section>
     </main>
 
     <script
