--- a/index.html
+++ b/index.html
@@ -532,7 +532,6 @@
                         Kelly Blue Book's KBB.com has awarded Honda as the most
                         awarded brand of 2017
                       </span>
-                      <a href="#" class="blog__content-link"> LEARN MORE </a>
                     </div>
                   </div>
                 </div>
@@ -550,25 +549,25 @@
                         <p>@Honda</p>
                       </div>
                     </div>
-                    <div class="blog__detail-desc">
+                    <span class="blog__detail-desc">
                       Lorem ipsum dolor sit amet consectetur adipisicing elit.
                       Reiciendis sit dolorum, asperiores placeat deleniti est.
                       <a href="#" class="blog__detail-desc-link">
                         https://t.co/UC7OLudVr4</a
                       >
-                    </div>
-                    <span class="blog__detail-time">
-                      12:00 AM - 07 Apr 2018
                     </span>
+                    <p class="blog__detail-time">12:00 AM - 07 Apr 2018</p>
                     <div class="blog__detail-icon">
                       <i class="fa fa-reply"></i>
                       <i class="fa fa-retweet">10</i>
                       <i class="fa fa-heart">25</i>
                     </div>
                   </div>
+                  <a href="#" class="blog__button">LEARN MORE</a>
                 </div>
               </div>
             </div>
+
             <div class="blog__item">
               <div class="blog__content">
                 <div class="blog__content-front">
@@ -585,10 +584,10 @@
                         Kelly Blue Book's KBB.com has awarded Honda as the most
                         awarded brand of 2017
                       </span>
-                      <a href="#" class="blog__content-link"> LEARN MORE </a>
                     </div>
                   </div>
                 </div>
+
                 <div class="blog__content-back">
                   <div class="blog__detail">
                     <div class="blog__detail-heading">
@@ -603,25 +602,25 @@
                         <p>@Honda</p>
                       </div>
                     </div>
-                    <div class="blog__detail-desc">
+                    <span class="blog__detail-desc">
                       Lorem ipsum dolor sit amet consectetur adipisicing elit.
                       Reiciendis sit dolorum, asperiores placeat deleniti est.
                       <a href="#" class="blog__detail-desc-link">
                         https://t.co/UC7OLudVr4</a
                       >
-                    </div>
-                    <span class="blog__detail-time">
-                      12:00 AM - 07 Apr 2018
                     </span>
+                    <p class="blog__detail-time">12:00 AM - 07 Apr 2018</p>
                     <div class="blog__detail-icon">
                       <i class="fa fa-reply"></i>
                       <i class="fa fa-retweet">10</i>
                       <i class="fa fa-heart">25</i>
                     </div>
                   </div>
+                  <a href="#" class="blog__button">LEARN MORE</a>
                 </div>
               </div>
             </div>
+
             <div class="blog__item">
               <div class="blog__content">
                 <div class="blog__content-front">
@@ -638,10 +637,10 @@
                         Kelly Blue Book's KBB.com has awarded Honda as the most
                         awarded brand of 2017
                       </span>
-                      <a href="#" class="blog__content-link"> LEARN MORE </a>
                     </div>
                   </div>
                 </div>
+
                 <div class="blog__content-back">
                   <div class="blog__detail">
                     <div class="blog__detail-heading">
@@ -656,25 +655,25 @@
                         <p>@Honda</p>
                       </div>
                     </div>
-                    <div class="blog__detail-desc">
+                    <span class="blog__detail-desc">
                       Lorem ipsum dolor sit amet consectetur adipisicing elit.
                       Reiciendis sit dolorum, asperiores placeat deleniti est.
                       <a href="#" class="blog__detail-desc-link">
                         https://t.co/UC7OLudVr4</a
                       >
-                    </div>
-                    <span class="blog__detail-time">
-                      12:00 AM - 07 Apr 2018
                     </span>
+                    <p class="blog__detail-time">12:00 AM - 07 Apr 2018</p>
                     <div class="blog__detail-icon">
                       <i class="fa fa-reply"></i>
                       <i class="fa fa-retweet">10</i>
                       <i class="fa fa-heart">25</i>
                     </div>
                   </div>
+                  <a href="#" class="blog__button">LEARN MORE</a>
                 </div>
               </div>
             </div>
+
             <div class="blog__item">
               <div class="blog__content">
                 <div class="blog__content-front">
@@ -691,10 +690,10 @@
                         Kelly Blue Book's KBB.com has awarded Honda as the most
                         awarded brand of 2017
                       </span>
-                      <a href="#" class="blog__content-link"> LEARN MORE </a>
                     </div>
                   </div>
                 </div>
+
                 <div class="blog__content-back">
                   <div class="blog__detail">
                     <div class="blog__detail-heading">
@@ -709,25 +708,25 @@
                         <p>@Honda</p>
                       </div>
                     </div>
-                    <div class="blog__detail-desc">
+                    <span class="blog__detail-desc">
                       Lorem ipsum dolor sit amet consectetur adipisicing elit.
                       Reiciendis sit dolorum, asperiores placeat deleniti est.
                       <a href="#" class="blog__detail-desc-link">
                         https://t.co/UC7OLudVr4</a
                       >
-                    </div>
-                    <span class="blog__detail-time">
-                      12:00 AM - 07 Apr 2018
                     </span>
+                    <p class="blog__detail-time">12:00 AM - 07 Apr 2018</p>
                     <div class="blog__detail-icon">
                       <i class="fa fa-reply"></i>
                       <i class="fa fa-retweet">10</i>
                       <i class="fa fa-heart">25</i>
                     </div>
                   </div>
+                  <a href="#" class="blog__button">LEARN MORE</a>
                 </div>
               </div>
             </div>
+
             <div class="blog__item">
               <div class="blog__content">
                 <div class="blog__content-front">
@@ -744,10 +743,10 @@
                         Kelly Blue Book's KBB.com has awarded Honda as the most
                         awarded brand of 2017
                       </span>
-                      <a href="#" class="blog__content-link"> LEARN MORE </a>
                     </div>
                   </div>
                 </div>
+
                 <div class="blog__content-back">
                   <div class="blog__detail">
                     <div class="blog__detail-heading">
@@ -762,25 +761,25 @@
                         <p>@Honda</p>
                       </div>
                     </div>
-                    <div class="blog__detail-desc">
+                    <span class="blog__detail-desc">
                       Lorem ipsum dolor sit amet consectetur adipisicing elit.
                       Reiciendis sit dolorum, asperiores placeat deleniti est.
                       <a href="#" class="blog__detail-desc-link">
                         https://t.co/UC7OLudVr4</a
                       >
-                    </div>
-                    <span class="blog__detail-time">
-                      12:00 AM - 07 Apr 2018
                     </span>
+                    <p class="blog__detail-time">12:00 AM - 07 Apr 2018</p>
                     <div class="blog__detail-icon">
                       <i class="fa fa-reply"></i>
                       <i class="fa fa-retweet">10</i>
                       <i class="fa fa-heart">25</i>
                     </div>
                   </div>
+                  <a href="#" class="blog__button">LEARN MORE</a>
                 </div>
               </div>
             </div>
+
             <div class="blog__item">
               <div class="blog__content">
                 <div class="blog__content-front">
@@ -797,10 +796,10 @@
                         Kelly Blue Book's KBB.com has awarded Honda as the most
                         awarded brand of 2017
                       </span>
-                      <a href="#" class="blog__content-link"> LEARN MORE </a>
                     </div>
                   </div>
                 </div>
+
                 <div class="blog__content-back">
                   <div class="blog__detail">
                     <div class="blog__detail-heading">
@@ -815,22 +814,21 @@
                         <p>@Honda</p>
                       </div>
                     </div>
-                    <div class="blog__detail-desc">
+                    <span class="blog__detail-desc">
                       Lorem ipsum dolor sit amet consectetur adipisicing elit.
                       Reiciendis sit dolorum, asperiores placeat deleniti est.
                       <a href="#" class="blog__detail-desc-link">
                         https://t.co/UC7OLudVr4</a
                       >
-                    </div>
-                    <span class="blog__detail-time">
-                      12:00 AM - 07 Apr 2018
                     </span>
+                    <p class="blog__detail-time">12:00 AM - 07 Apr 2018</p>
                     <div class="blog__detail-icon">
                       <i class="fa fa-reply"></i>
                       <i class="fa fa-retweet">10</i>
                       <i class="fa fa-heart">25</i>
                     </div>
                   </div>
+                  <a href="#" class="blog__button">LEARN MORE</a>
                 </div>
               </div>
             </div>
