update code blog and button

--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
                   vehicle models and future cars. Check back after what vehicles
                   are up and coming from Honda.
                 </span>
-                <a href="#" class="btn">Go</a>
+                <a href="#" class="btn-border intro__inner-btn">Go</a>
               </div>
             </div>
             <div class="intro__item intro__item-right">
@@ -126,7 +126,9 @@
                   Personalize a 2018 ACCORD SEDAN to make it your own.
                 </h3>
 
-                <a href="#" class="btn-border">BUILD MY PRICE</a>
+                <a href="#" class="btn-border intro__inner-link"
+                  >BUILD MY PRICE</a
+                >
               </div>
             </div>
           </div>
