--- a/index.html
+++ b/index.html
@@ -517,6 +517,7 @@
             Explore the world of Honda through out latest news, events and
             videos.
           </span>
+
           <div class="blog__list">
             <div class="blog__item">
               <div class="blog__content">
@@ -833,6 +834,15 @@
                   <a href="#" class="blog__button">LEARN MORE</a>
                 </div>
               </div>
+            </div>
+          </div>
+
+          <div class="blog__search">
+            <a href="#" class="blog__search-link"> MORE NEWS & EVENT </a>
+            <div class="blog__search-group">
+              <i class="fa fa-search"></i>
+              <input type="text" placeholder="Search for anything Honda" />
+              <a href="#" class="blog__search-btn">SEARCH</a>
             </div>
           </div>
         </div>
