--- a/index.html
+++ b/index.html
@@ -171,7 +171,7 @@
                 role="tab"
                 aria-controls="pills-crossover"
                 aria-selected="false"
-                >CROSSOVER & SUV</a
+                >CROSSOVER</a
               >
             </li>
             <li class="nav-item" role="presentation">
@@ -183,7 +183,7 @@
                 role="tab"
                 aria-controls="pills-minivan"
                 aria-selected="false"
-                >MINIVAN & TRUCK</a
+                >MINIVAN</a
               >
             </li>
             <li class="nav-item" role="presentation">
@@ -218,9 +218,11 @@
             class="tab-pane fade show active"
             id="pills-cars"
             role="tabpanel"
+       
             aria-labelledby="pills-cars-tab"
           >
-            <img src="./image/slider-1.jpg" alt="" />
+            <img src="./image/slider-1.jpg" alt="" class="product__content-slider"/>
+            <img src="./image/banner-mobile-1.jpg" alt="" class="product__content-mobile"/>
             <div class="container product__content">
               <h3 class="product__content-heading">
                 <strong>CAR 1</strong>/12
@@ -259,7 +261,8 @@
             role="tabpanel"
             aria-labelledby="pills-crossover-tab"
           >
-            <img src="./image/slider-2.jpg" alt="" />
+            <img src="./image/slider-2.jpg" alt="" class="product__content-slider"/>
+            <img src="./image/banner-mobile-2.jpg" alt="" class="product__content-mobile"/>
             <div class="container product__content">
               <h3 class="product__content-heading">
                 <strong>CAR 2</strong>/12
@@ -298,7 +301,8 @@
             role="tabpanel"
             aria-labelledby="pills-minivan-tab"
           >
-            <img src="./image/slider-3.jpg" alt="" />
+            <img src="./image/slider-3.jpg" alt="" class="product__content-slider"/>
+            <img src="./image/banner-mobile-3.jpg" alt="" class="product__content-mobile"/>
             <div class="container product__content">
               <h3 class="product__content-heading">
                 <strong>CAR 3</strong>/12
@@ -337,7 +341,8 @@
             role="tabpanel"
             aria-labelledby="pills-environmental-tab"
           >
-            <img src="./image/slider-4.jpg" alt="" />
+            <img src="./image/slider-4.jpg" alt="" class="product__content-slider"/>
+            <img src="./image/banner-mobile-4.jpg" alt="" class="product__content-mobile"/>
             <div class="container product__content">
               <h3 class="product__content-heading">
                 <strong>CAR 4</strong>/12
@@ -376,7 +381,8 @@
             role="tabpanel"
             aria-labelledby="pills-future-tab"
           >
-            <img src="./image/slider-5.jpg" alt="" />
+            <img src="./image/slider-5.jpg" alt="" class="product__content-slider"/>
+            <img src="./image/banner-mobile-5.jpg" alt="" class="product__content-mobile"/>
             <div class="container product__content">
               <h3 class="product__content-heading">
                 <strong>CAR 5</strong>/12
@@ -538,13 +544,15 @@
                         <p>@Honda</p>
                       </div>
                     </div>
-                    <span class="blog__detail-desc">
-                      Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                      Reiciendis sit dolorum, asperiores placeat deleniti est.
+                    <div class="blog__detail-desc">
+                      <span class="blog__detail-desc-text">
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                        Reiciendis sit dolorum, asperiores placeat deleniti est.
+                      </span>
                       <a href="#" class="blog__detail-desc-link">
                         https://t.co/UC7OLudVr4</a
                       >
-                    </span>
+                    </div>
                     <p class="blog__detail-time">12:00 AM - 07 Apr 2018</p>
                     <div class="blog__detail-icon">
                       <i class="fa fa-reply"></i>
@@ -591,13 +599,15 @@
                         <p>@Honda</p>
                       </div>
                     </div>
-                    <span class="blog__detail-desc">
-                      Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                      Reiciendis sit dolorum, asperiores placeat deleniti est.
+                    <div class="blog__detail-desc">
+                      <span class="blog__detail-desc-text">
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                        Reiciendis sit dolorum, asperiores placeat deleniti est.
+                      </span>
                       <a href="#" class="blog__detail-desc-link">
                         https://t.co/UC7OLudVr4</a
                       >
-                    </span>
+                    </div>
                     <p class="blog__detail-time">12:00 AM - 07 Apr 2018</p>
                     <div class="blog__detail-icon">
                       <i class="fa fa-reply"></i>
@@ -644,13 +654,15 @@
                         <p>@Honda</p>
                       </div>
                     </div>
-                    <span class="blog__detail-desc">
-                      Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                      Reiciendis sit dolorum, asperiores placeat deleniti est.
+                    <div class="blog__detail-desc">
+                      <span class="blog__detail-desc-text">
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                        Reiciendis sit dolorum, asperiores placeat deleniti est.
+                      </span>
                       <a href="#" class="blog__detail-desc-link">
                         https://t.co/UC7OLudVr4</a
                       >
-                    </span>
+                    </div>
                     <p class="blog__detail-time">12:00 AM - 07 Apr 2018</p>
                     <div class="blog__detail-icon">
                       <i class="fa fa-reply"></i>
@@ -697,13 +709,15 @@
                         <p>@Honda</p>
                       </div>
                     </div>
-                    <span class="blog__detail-desc">
-                      Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                      Reiciendis sit dolorum, asperiores placeat deleniti est.
+                    <div class="blog__detail-desc">
+                      <span class="blog__detail-desc-text">
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                        Reiciendis sit dolorum, asperiores placeat deleniti est.
+                      </span>
                       <a href="#" class="blog__detail-desc-link">
                         https://t.co/UC7OLudVr4</a
                       >
-                    </span>
+                    </div>
                     <p class="blog__detail-time">12:00 AM - 07 Apr 2018</p>
                     <div class="blog__detail-icon">
                       <i class="fa fa-reply"></i>
@@ -750,13 +764,15 @@
                         <p>@Honda</p>
                       </div>
                     </div>
-                    <span class="blog__detail-desc">
-                      Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                      Reiciendis sit dolorum, asperiores placeat deleniti est.
+                    <div class="blog__detail-desc">
+                      <span class="blog__detail-desc-text">
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                        Reiciendis sit dolorum, asperiores placeat deleniti est.
+                      </span>
                       <a href="#" class="blog__detail-desc-link">
                         https://t.co/UC7OLudVr4</a
                       >
-                    </span>
+                    </div>
                     <p class="blog__detail-time">12:00 AM - 07 Apr 2018</p>
                     <div class="blog__detail-icon">
                       <i class="fa fa-reply"></i>
@@ -803,13 +819,15 @@
                         <p>@Honda</p>
                       </div>
                     </div>
-                    <span class="blog__detail-desc">
-                      Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                      Reiciendis sit dolorum, asperiores placeat deleniti est.
+                    <div class="blog__detail-desc">
+                      <span class="blog__detail-desc-text">
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                        Reiciendis sit dolorum, asperiores placeat deleniti est.
+                      </span>
                       <a href="#" class="blog__detail-desc-link">
                         https://t.co/UC7OLudVr4</a
                       >
-                    </span>
+                    </div>
                     <p class="blog__detail-time">12:00 AM - 07 Apr 2018</p>
                     <div class="blog__detail-icon">
                       <i class="fa fa-reply"></i>
@@ -828,8 +846,9 @@
             <div class="blog__search-group">
               <i class="fa fa-search"></i>
               <input type="text" placeholder="Search for anything Honda" />
-              <a href="#" class="blog__search-btn">SEARCH</a>
+              <a href="#" class="blog__search-btn blog__search-desktop">SEARCH</a>
             </div>
+              <a href="#" class="blog__search-btn blog__search-mobile">SEARCH</a>
           </div>
         </div>
       </section>
