--- a/index.html
+++ b/index.html
@@ -25,6 +25,44 @@
     <title>Shop Current & Upcoming Vehicles | Honda</title>
   </head>
   <body>
+
+    <div class="menu">
+      <i class="fa fa-times menu-close"></i>
+      <ul class="menu-list">
+        <li class="menu-item">
+          <a href="#" class="menu-link">Home</a>
+        </li>
+        <!-- <li class="menu-item">
+          <a href="#contact" class="menu-link">Liên Hệ</a>
+        </li> -->
+        <!-- <li class="menu-item">
+          <a href="#contact" class="menu-link">Liên Hệ</a>
+        </li> -->
+        <li class="menu-item">
+          <a href="#dealer" class="menu-link">
+            Dealer
+            <i class="fa fa-map-marker-alt"></i>
+          </a>
+        </li>
+        <li class="menu-item">
+          <a href="#owners" class="menu-link">Owners</a>
+        </li>
+        <li class="menu-item">
+          <a href="#" class="menu-link">
+            English
+          <i class="fa fa-globe"></i>
+        </a>
+        </li>
+        <li class="menu-item menu-phone">
+          Phone : <a href="tel: 0985049113">0985.049.113</a>
+        </li>
+        <li class="menu-item search-group">
+          <input type="text" placeholder="Seach..." />
+          <a href="#" class="menu-link menu-search">Search</a>
+        </li>
+      </ul>
+    </div>
+
     <header class="header">
       <div class="header__left">
         <a href="" class="header__left-logo header__item">
@@ -53,13 +91,16 @@
           <a href=""> Discover</a> 
         </li>
         <li class="header__right-item">
-          <a href=""> English</a> 
+          <a href=""> 
+            <i class="fa fa-globe"></i>
+            English</a> 
         </li>
-        <li class=" header__search">
+        <li class=" header__search ">
             <i class="fa fa-search"></i>
+            <input type="text" placeholder="Search..." class="header__input">
         </li>
-        <li class=" header__bars">
-            <i class="fa fa-bars"></i>
+        <li class=" header__bars header__button-toggle">
+            <i class="fa fa-bars "></i>
         </li>
       </ul>
     </header>
@@ -1033,13 +1074,8 @@
             </div>
           </div>
           <div class="footer__contact">
-            <div class="footer__contact-text">
+            <div class="footer__contact-icon">
               <div class="footer__contact-heading">Stay In Touch</div>
-              <p class="footer__contact-right">
-                Receive the latest news and exclusive updates.
-              </p>
-            </div>
-            <div class="footer__contact-iconbutton">
               <div class="footer__contact-listicon">
                 <a href="#">
                   <i class="fab fa-facebook"></i>
@@ -1066,6 +1102,11 @@
                   <i class="fa fa-bell"></i>
                 </a>
               </div>
+            </div>
+            <div class="footer__contact-mail">
+              <p class="footer__contact-mail-text">
+                Receive the latest news and exclusive updates.
+              </p>
               <a href="#" class="footer__contact-button btn-border">
                 <i class="fab fa-facebook"></i>
                 STAY INFORMED
@@ -1091,11 +1132,11 @@
               </ul>
           </div>
           <div class="footer__bottom-logo">
-            <img src="./image/footer-logo1.png" alt="">
+            <img src="./image/footer-logo1.png" alt="" class="footer__bottom-logo-mobile">
             <img src="./image/footer-logo2.png" alt="">
             <img src="./image/footer-logo3.png" alt="">
             <img src="./image/footer-logo4.png" alt="">
-            <img src="./image/footer-logo5.png" alt="">
+            <img src="./image/footer-logo5.png" alt="" class="footer__bottom-logo-mobile">
             <img src="./image/footer-logo6.png" alt="">
             <img src="./image/footer-logo7.png" alt="">
             <img src="./image/footer-logo8.png" alt="">
@@ -1125,5 +1166,6 @@
         interval: 1800,
       });
     </script>
+    <script src="./js/main.js"></script>
   </body>
 </html>
