--- a/index.html
+++ b/index.html
@@ -32,12 +32,12 @@
         <li class="menu-item">
           <a href="#" class="menu-link">Home</a>
         </li>
-        <!-- <li class="menu-item">
-          <a href="#contact" class="menu-link">Liên Hệ</a>
-        </li> -->
-        <!-- <li class="menu-item">
-          <a href="#contact" class="menu-link">Liên Hệ</a>
-        </li> -->
+        <li class="menu-item menu-mobile">
+          <a href="#vihivles" class="menu-link">VIHIVLES</a>
+        </li>
+        <li class="menu-item menu-mobile">
+          <a href="#shoptool" class="menu-link">SHOPING TOOL</a>
+        </li>
         <li class="menu-item">
           <a href="#dealer" class="menu-link">
             Dealer
@@ -1142,6 +1142,12 @@
             <img src="./image/footer-logo8.png" alt="">
 
           </div>
+        </div>
+        <div id="rocket">
+          <a href="#">
+            <i class="fa fa-rocket"></i>
+
+          </a>
         </div>
       </section>
     </main>
